Add SEO meta tags and sitemap

--- a/FireSafety/src/index.html
+++ b/FireSafety/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sri Jai Fire Safety</title>
+  <title>Sri Jai Fire Safety And Solutions | Fire Safety Equipment Visakhapatnam</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Sri Jai Fire Safety provides fire extinguishers, alarm systems, sprinklers, and installation services in Visakhapatnam, Vijayawada, Anantapur. ISI certified products.">
+  <meta name="keywords" content="fire safety, fire extinguisher, fire alarm, sprinkler system, Visakhapatnam, Vijayawada, fire equipment, fire safety services">
+  <meta name="author" content="Sri Jai Fire Safety And Solutions">
+  <meta property="og:title" content="Sri Jai Fire Safety And Solutions">
+  <meta property="og:description" content="Professional fire safety equipment and services in Andhra Pradesh">
+  <meta property="og:url" content="https://www.srijaifiresafetysolutions.com">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
